ras chapter alignment corrected

--- a/Flexor/seleajsasset/assets/css/style.css
+++ b/Flexor/seleajsasset/assets/css/style.css
@@ -164,24 +164,28 @@ section {
 # Counts
 --------------------------------------------------------------*/
 .counts {
-  background: linear-gradient(90deg, rgba(12, 121, 223, 0.5) 0%, rgba(5, 91, 172, 0.5) 100%), url("../img/counts-bg.png") center center no-repeat;
-  padding: 20px 0 10px 0;
+  background: linear-gradient(90deg, rgba(140, 17, 197, 0.5) 0%, rgba(5, 91, 172, 0.5) 100%), url("../img/counts-bg.png") center center no-repeat;
+  padding: 20px 0 10px 0;display:flex;
 }
 
 .counts .counters span {
   font-size: 48px;
-  display: block;
+  display: center;
   color: #fff;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
 }
 
 .counts .counters p {
-  padding: 0;
+ /* padding:300; */
   margin: 0 0 20px 0;
   font-size: 15px;
   color: rgba(255, 255, 255, 0.8);
 }
+.row.counters{
+align-items:center;
+}
+
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
@@ -265,19 +269,19 @@ section {
   # Cta
   --------------------------------------------------------------*/
   .cta {
-    background: #2a2c39;
-    padding: 80px 0;
+    background:linear-gradient(90deg, #355ea9 0%, #e8ca9c 100%);
+   /* padding:80px 0px; */
+    align-items: flex-end;
   }
   
   .cta h3 {
     color: #fff;
     font-size: 28px;
     font-weight: 700;
+   
   }
   
-  .cta p {
-    color: #fff;
-  }
+
   
   .cta .cta-btn {
     font-family: "Raleway", sans-serif;
@@ -288,15 +292,19 @@ section {
     display: inline-block;
     padding: 12px 30px;
     border-radius: 50px;
-    transition: 0.5s;
+    transition: .5s;
     margin: 10px;
     color: #fff;
-    background: #ef6603;
+    background: rgb(255 193 7);
   }
   
   .cta .cta-btn:hover {
     background: #fff;
     color: #ef6603;
+  }
+
+  .col-lg-9{
+    padding-top: 15px;
   }
   
   @media (max-width: 1024px) {
@@ -405,7 +413,7 @@ section {
   }
   .main-green-button a {
     display: inline-block;
-    background-color: #33ccc5;
+    background-color: #5dcff1;
     font-size: 15px;
     font-weight: 400;
     color: #fff;
